crates/schema/tests/compile_fail/derive_enum_select_secret.stderr
error: `#[param(enum_select)]` cannot be combined with `#[param(secret)]`
  --> tests/compile_fail/derive_enum_select_secret.rs:12:5
   |
12 |     c: Color,
   |     ^

error[E0599]: no function or associated item named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_enum_select_secret.rs:16:18
   |
10 | struct Bad {
   | ---------- function or associated item `schema` not found for this struct
...
16 |     let _ = Bad::schema();
   |                  ^^^^^^ function or associated item not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
